--- a/solutions/training_solution.ipynb
+++ b/solutions/training_solution.ipynb
@@ -4,113 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to EM data, neuron segmentation and gunpowder\n",
-    "### A simple gunpowder example pipeline for loading and manipulating data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "from gunpowder import *\n",
-    "from gunpowder.tensorflow import *\n",
-    "import numpy as np\n",
-    "import os\n",
-    "\n",
-    "\n",
-    "# A simple gunpowder pipeline for loading and manipulating data:\n",
-    "data_dir = '../../woodshole/segmentation/data'\n",
-    "\n",
-    "samples = [\n",
-    "    'sample_A',\n",
-    "    'sample_B',\n",
-    "    'sample_C'\n",
-    "]\n",
-    "\n",
-    "\n",
-    "# Define gunpowder variables of interest:\n",
-    "raw = ArrayKey('RAW') # Raw EM data\n",
-    "labels = ArrayKey('GT_LABELS') # ground truth neuron segmentation \n",
-    "affinities = ArrayKey('GT_AFFINITIES') # affinities\n",
-    "\n",
-    "# Voxel size is the physical size of one voxel (=3D pixel) in nm.\n",
-    "voxel_size = Coordinate((40, 4, 4))\n",
-    "batch_size = Coordinate((30,1000,1000)) * voxel_size\n",
-    "\n",
-    "# Request all the data you need for training:\n",
-    "request = BatchRequest()\n",
-    "request.add(raw, batch_size)\n",
-    "request.add(labels, batch_size)\n",
-    "request.add(affinities, batch_size)\n",
-    "\n",
-    "# Request a snapshot s.t. you are able to visualize the data in your pipeline.\n",
-    "snapshot_request = BatchRequest({\n",
-    "    raw: request[raw],\n",
-    "    labels: request[labels],\n",
-    "    affinities: request[affinities]\n",
-    "})\n",
-    "\n",
-    "# Note that the data only provides raw and neuron_ids which is the neuron segmentation.\n",
-    "# However, we need affinities which we can generate from neuron_ids by using gunpowder (see below):\n",
-    "data_sources = tuple(\n",
-    "    N5Source(\n",
-    "        os.path.join(data_dir, sample + '.n5'),\n",
-    "        datasets = {\n",
-    "            raw: 'volumes/raw',\n",
-    "            labels: 'volumes/labels/neuron_ids',\n",
-    "        },\n",
-    "        array_specs = {\n",
-    "            raw: ArraySpec(interpolatable=True),\n",
-    "            labels: ArraySpec(interpolatable=False)\n",
-    "        }\n",
-    "    ) +\n",
-    "    Normalize(raw) + \n",
-    "    Pad(labels, None) +\n",
-    "    RandomLocation()\n",
-    "    for sample in samples\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "# Define a neighborhood for affinities:\n",
-    "neighborhood = [[-1, 0, 0], [0, -1, 0], [0, 0, -1]]\n",
-    "\n",
-    "pipeline = (\n",
-    "    data_sources +\n",
-    "    RandomProvider() +\n",
-    "    AddAffinities(neighborhood,\n",
-    "                 labels=labels,\n",
-    "                 affinities=affinities) +\n",
-    "    Snapshot({raw: 'volumes/raw',\n",
-    "              labels: 'volumes/labels/neuron_ids',\n",
-    "              affinities: 'volumes/affinities'}))\n",
-    "    \n",
-    "    \n",
-    "with build(pipeline) as b:\n",
-    "    b.request_batch(request)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Visualize data using neuroglancer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
+    "# Specify Network Architecture\n",
     "## mknet.py"
    ]
   },
@@ -211,19 +105,19 @@
     "\n",
     "        raw = tf.placeholder(tf.float32, shape=input_shape)\n",
     "        raw_batched = tf.reshape(raw, (1, 1) + input_shape)\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Define your model architecture here:\n",
-    "        \n",
-    "        1. Set the main model parameters for the UNet:\n",
-    "        \n",
-    "        unet, _, _ = models.unet(...)\n",
-    "        \n",
-    "        2. Generate the desired number of output features (3 for affinities in z,y,x direction)\n",
-    "           by using a convolution with kernel size 1:\n",
-    "           \n",
-    "        affs_batched = models.conv_pass(unet, ...)\n",
-    "        \"\"\"\n",
+    "\n",
+    "        unet, _, _ = models.unet(\n",
+    "                raw_batched,\n",
+    "                12,\n",
+    "                5,\n",
+    "                [[1,3,3],[1,3,3],[3,3,3]])\n",
+    "\n",
+    "        affs_batched, _ = models.conv_pass(\n",
+    "            unet,\n",
+    "            kernel_sizes=[1],\n",
+    "            num_fmaps=3,\n",
+    "            activation='sigmoid',\n",
+    "            name='affs')\n",
     "\n",
     "        output_shape_batched = affs_batched.get_shape().as_list()\n",
     "        output_shape = output_shape_batched[1:] # strip the batch dimension\n",
@@ -232,37 +126,27 @@
     "\n",
     "        gt_affs = tf.placeholder(tf.float32, shape=output_shape)\n",
     "        affs_loss_weights = tf.placeholder(tf.float32, shape=output_shape)\n",
-    "        \n",
-    "        \"\"\"\n",
-    "        Define your loss here. For reference see tensorflow.losses documentation.\n",
-    "        \n",
-    "        loss = ...\n",
-    "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        loss = tf.losses.mean_squared_error(\n",
     "            gt_affs,\n",
     "            affs,\n",
     "            affs_loss_weights)\n",
     "\n",
-    "        # Generate a summary for tensorboard:\n",
     "        summary = tf.summary.scalar('setup0', loss)\n",
     "\n",
-    "        \"\"\"\n",
-    "        Choose an optimizer and learning parameters. Minimize the loss.\n",
-    "        For reference see tensorflow.train\n",
-    "        \n",
-    "        opt = ...\n",
+    "        opt = tf.train.AdamOptimizer(\n",
+    "            learning_rate=0.5e-4,\n",
+    "            beta1=0.95,\n",
+    "            beta2=0.999,\n",
+    "            epsilon=1e-8)\n",
     "        optimizer = opt.minimize(loss)\n",
-    "        \"\"\"\n",
     "\n",
     "        output_shape = output_shape[1:]\n",
     "        print(\"input shape : %s\"%(input_shape,))\n",
     "        print(\"output shape: %s\"%(output_shape,))\n",
     "\n",
-    "        # Export your computation graph:\n",
     "        tf.train.export_meta_graph(filename=name + '.meta')\n",
     "\n",
-    "        # Write out the names of relevant tensors in this graph s.t. the train script can feed and receive values.\n",
     "        config = {\n",
     "            'raw': raw.name,\n",
     "            'affs': affs.name,\n",
@@ -281,15 +165,19 @@
     "            json.dump(config, f)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    # Run the script and produce the necessary files for training:\n",
-    "    create_network((84, 268, 268), 'train_net')"
+    "\n",
+    "    z=18\n",
+    "    xy=162\n",
+    "\n",
+    "    create_network((84, 268, 268), 'train_net')\n",
+    "    create_network((96+z, 484+xy, 484+xy), 'config')\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A gunpowder training pipeline"
+    "# Train Network"
    ]
   },
   {
@@ -343,6 +231,8 @@
    ],
    "source": [
     "from __future__ import print_function\n",
+    "#import multiprocessing\n",
+    "#multiprocessing.set_start_method('forkserver')\n",
     "import sys\n",
     "from gunpowder import *\n",
     "from gunpowder.tensorflow import *\n",
@@ -355,8 +245,6 @@
     "\n",
     "logging.basicConfig(level=logging.INFO)\n",
     "\n",
-    "\n",
-    "# Adapt the path to where the training data is stored:\n",
     "data_dir = '../data'\n",
     "\n",
     "samples = [\n",
@@ -365,7 +253,6 @@
     "    'sample_C'\n",
     "]\n",
     "\n",
-    "# This defines how we calculate affinities, in this case we consider direct neighbours in z,y,x direction:\n",
     "neighborhood = [[-1, 0, 0], [0, -1, 0], [0, 0, -1]]\n",
     "\n",
     "def train_until(max_iteration):\n",
@@ -377,11 +264,9 @@
     "    if trained_until >= max_iteration:\n",
     "        return\n",
     "\n",
-    "    # Load tensor names from the file you generated above:\n",
     "    with open('train_net.json', 'r') as f:\n",
     "        config = json.load(f)\n",
     "\n",
-    "    # Define gunpowder variables of interest\n",
     "    raw = ArrayKey('RAW')\n",
     "    labels = ArrayKey('GT_LABELS')\n",
     "    labels_mask = ArrayKey('GT_LABELS_MASK')\n",
@@ -397,19 +282,6 @@
     "    context = output_size/2\n",
     "    print('CONTEXT: ', context)\n",
     "\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Build the actual data loading and train pipeline by chaining\n",
-    "    gunpowder nodes. Each gunpowder node provides an atomic operation \n",
-    "    and can request data from upstream nodes. For reference see:\n",
-    "    https://github.com/funkey/gunpowder\n",
-    "    \n",
-    "    In the following we provide you with a skeleton\n",
-    "    pipeline. You should add the actual training node, data preprocessing nodes and \n",
-    "    data augmentation nodes.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Request all the data you need for training:\n",
     "    request = BatchRequest()\n",
     "    request.add(raw, input_size)\n",
     "    request.add(labels, output_size)\n",
@@ -418,16 +290,11 @@
     "    request.add(gt_mask, output_size)\n",
     "    request.add(gt_scale, output_size)\n",
     "\n",
-    "    # Request a snapshot s.t. you are able to visualize the data used and produced during training.\n",
     "    snapshot_request = BatchRequest({\n",
     "        affs: request[gt],\n",
     "        affs_gradient: request[gt]\n",
     "    })\n",
     "\n",
-    "    # Define a data source. In this case the data we provide contains \n",
-    "    # raw EM images together with neuron segments (neuron_ids)\n",
-    "    # and a mask for regions in the EM data that should not contribute towards \n",
-    "    # training.\n",
     "    data_sources = tuple(\n",
     "        N5Source(\n",
     "            os.path.join(data_dir, sample + '.n5'),\n",
@@ -442,7 +309,7 @@
     "                labels_mask: ArraySpec(interpolatable=False)\n",
     "            }\n",
     "        ) +\n",
-    "        Normalize(raw) + \n",
+    "        Normalize(raw) +\n",
     "        Pad(labels, context) +\n",
     "        Pad(labels_mask, context) +\n",
     "        RandomLocation() +\n",
@@ -450,31 +317,58 @@
     "        for sample in samples\n",
     "    )\n",
     "\n",
-    "    \"\"\"\n",
-    "    Define the actual train pipeline here:\n",
-    "    \n",
+    "\n",
     "    train_pipeline = (\n",
     "        data_sources +\n",
     "        RandomProvider() +\n",
-    "        ```Add elastic augmentation``` +\n",
-    "        ```Add simple augmentation``` + \n",
-    "        ```Add intensity augmentation``` +\n",
+    "        ElasticAugment(\n",
+    "            control_point_spacing=[4,40,40],\n",
+    "            jitter_sigma=[0,2,2],\n",
+    "            rotation_interval=[0,math.pi/2.0],\n",
+    "            prob_slip=0.05,\n",
+    "            prob_shift=0.05,\n",
+    "            max_misalign=10,\n",
+    "            subsample=8) +\n",
+    "        SimpleAugment(transpose_only=[1, 2]) +\n",
+    "        IntensityAugment(raw, 0.9, 1.1, -0.1, 0.1, z_section_wise=True) +\n",
     "        GrowBoundary(labels, labels_mask, steps=1, only_xy=True) +\n",
-    "        ```So far the data sources only provide neuron labels\n",
-    "            and the raw em data. We need to generate the actual training\n",
-    "            data which are affinities. Add a node that does this here.``` +\n",
+    "        AddAffinities(\n",
+    "            neighborhood,\n",
+    "            labels=labels,\n",
+    "            affinities=gt,\n",
+    "            labels_mask=labels_mask,\n",
+    "            affinities_mask=gt_mask) +\n",
     "        BalanceLabels(\n",
     "            gt,\n",
     "            gt_scale,\n",
     "            gt_mask) +\n",
-    "        ```Add defect augment without artifacts```\n",
+    "        DefectAugment(\n",
+    "            raw,\n",
+    "            prob_missing=0.03,\n",
+    "            prob_low_contrast=0.01,\n",
+    "            contrast_scale=0.5,\n",
+    "            axis=0) +\n",
     "        IntensityScaleShift(raw, 2,-1) +\n",
     "        PreCache(cache_size=40,\n",
     "                 num_workers=10) +\n",
-    "        ```\n",
-    "        Add the actual Train node here:\n",
-    "        Train(...) +\n",
-    "        ```\n",
+    "        Train(\n",
+    "            'train_net',\n",
+    "            optimizer=config['optimizer'],\n",
+    "            loss=config['loss'],\n",
+    "            inputs={\n",
+    "                config['raw']: raw,\n",
+    "                config['gt_affs']: gt,\n",
+    "                config['affs_loss_weights']: gt_scale,\n",
+    "            },\n",
+    "            outputs={\n",
+    "                config['affs']: affs\n",
+    "            },\n",
+    "            gradients={\n",
+    "                config['affs']: affs_gradient\n",
+    "            },\n",
+    "            summary=config['summary'],\n",
+    "            log_dir='log',\n",
+    "            save_every=10000) +\n",
     "        IntensityScaleShift(raw, 0.5, 0.5) +\n",
     "        Snapshot({\n",
     "                raw: 'volumes/raw',\n",
@@ -493,18 +387,15 @@
     "            additional_request=snapshot_request) +\n",
     "        PrintProfilingStats(every=10)\n",
     "    )\n",
-    "    \n",
-    "    \"\"\"\n",
     "\n",
     "    print(\"Starting training...\")\n",
-    "    \"\"\"\n",
-    "    Implement the train loop:\n",
     "    with build(train_pipeline) as b:\n",
-    "        ...\n",
-    "    \"\"\"\n",
+    "        for i in range(max_iteration - trained_until):\n",
+    "            b.request_batch(request)\n",
     "    print(\"Training finished\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
+    "\n",
     "    iteration = 500000\n",
     "    train_until(iteration)"
    ]
