Add exercise descriptions

--- a/exercises/training.ipynb
+++ b/exercises/training.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to EM data, neuron segmentation and gunpowder\n",
-    "### A simple gunpowder example pipeline for loading and manipulating data"
+    "# Exercise 0.1\n",
+    "## Introduction to EM data, neuron segmentation and gunpowder\n",
+    "### A simple gunpowder example pipeline for loading and manipulating data\n",
+    "\n",
+    "Become familiar with gunpowder. Read and try to understand the following code as well as the general principle behind gunpowder. Read the introductory example in the gunpowder documentation: https://github.com/funkey/gunpowder/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +71,7 @@
     "        }\n",
     "    ) +\n",
     "    Normalize(raw) + \n",
-    "    Pad(labels, None) +\n",
+    "    #Pad(labels, None) +\n",
     "    RandomLocation()\n",
     "    for sample in samples\n",
     "    )\n",
@@ -96,22 +99,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize data using neuroglancer"
+    "# Exercise 0.2 \n",
+    "## Visualize data using neuroglancer\n",
+    "\n",
+    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import neuroglancer\n",
+    "import h5py\n",
+    "import numpy as np\n",
+    "\n",
+    "def add(s, a, name, offset, voxel_size, shader=None):\n",
+    "    if shader == 'rgb':\n",
+    "        shader=\"\"\"void main() \n",
+    "                  { emitRGB(vec3(toNormalized(getDataValue(0)), \n",
+    "                                 toNormalized(getDataValue(1)), \n",
+    "                                 toNormalized(getDataValue(2)))); }\"\"\"\n",
+    "\n",
+    "    kwargs = {}\n",
+    "\n",
+    "    if shader is not None:\n",
+    "        kwargs['shader'] = shader\n",
+    "\n",
+    "    s.layers.append(\n",
+    "            name=name,\n",
+    "            layer=neuroglancer.LocalVolume(\n",
+    "                data=a,\n",
+    "                offset=np.array(offset) * voxel_size,\n",
+    "                voxel_size=voxel_size\n",
+    "            ),\n",
+    "            **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 30, 1000, 1000)\n",
+      "http://127.0.0.1:38477/v/91dbf8ad69665fdb191328b382e499d6035bea30/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in callback None()\n",
+      "handle: <Handle cancelled>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
+      "    self._callback(*self._args)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
+      "    handler_func(fileobj, events)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
+      "    self._handle_write()\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
+      "    self._write_buffer.advance(num_bytes)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
+      "    assert 0 < size <= self._size\n",
+      "AssertionError\n",
+      "Exception in callback None()\n",
+      "handle: <Handle cancelled>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
+      "    self._callback(*self._args)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
+      "    handler_func(fileobj, events)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
+      "    self._handle_write()\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
+      "    self._write_buffer.advance(num_bytes)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
+      "    assert 0 < size <= self._size\n",
+      "AssertionError\n"
+     ]
+    }
+   ],
+   "source": [
+    "viewer = neuroglancer.Viewer()\n",
+    "\n",
+    "with h5py.File(\"./snapshots/00000003.hdf\") as f:\n",
+    "    raw = np.array(f[\"volumes/raw\"])\n",
+    "    labels = np.array(f[\"volumes/labels/neuron_ids\"])\n",
+    "    affinities = np.array(f[\"volumes/affinities\"], dtype=np.float32)\n",
+    "\n",
+    "data_sets = {\"raw\": raw, \"labels\": labels, \"affinities\": affinities}\n",
+    "offset = (0,0,0)\n",
+    "voxel_size = (4,4,40)\n",
+    "print(np.shape(affinities))\n",
+    "\n",
+    "with viewer.txn() as s:\n",
+    "    for label, data in data_sets.items():\n",
+    "        if label == \"affinties\":\n",
+    "            add(s, data, label, offset, voxel_size, shader='rgb')\n",
+    "        else:\n",
+    "            add(s, data, label, offset, voxel_size)\n",
+    "\n",
+    "print(viewer)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
-    "## mknet.py"
+    "# Exercise 1\n",
+    "## Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
+    "#### mknet.py\n",
+    "\n",
+    "In this exercise we ask you to fill in the given template file to create a compuation graph for your neural network. Follow the instructions in the code and make use of help and documentations."
    ]
   },
   {
@@ -289,7 +398,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A gunpowder training pipeline"
+    "# Exercise 2\n",
+    "## A gunpowder training pipeline\n",
+    "\n",
+    "In this exercise we ask you to use gunpowder in combination with tensorflow to build a training pipeline for affinity prediction. Fill in the gaps in the template code below and train your network!"
    ]
   },
   {
