--- a/exercises/training.ipynb
+++ b/exercises/training.ipynb
@@ -200,7 +200,6 @@
     "data_sets = {\"raw\": raw, \"labels\": labels, \"affinities\": affinities}\n",
     "offset = (0,0,0)\n",
     "voxel_size = (4,4,40)\n",
-    "print(np.shape(affinities))\n",
     "\n",
     "with viewer.txn() as s:\n",
     "    for label, data in data_sets.items():\n",
@@ -213,6 +212,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'funlib.show'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-d6a3ea23451f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mneuroglancer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mfunlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuroglancer\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfunlibng\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdata_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./snapshots/00000003.hdf'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0maffs_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volumes/affs'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'funlib.show'"
+     ]
+    }
+   ],
+   "source": [
+    "import neuroglancer\n",
+    "import funlib.show.neuroglancer as funlibng\n",
+    "\n",
+    "data_file = './snapshots/00000003.hdf'\n",
+    "affs_ds = daisy.open_ds(data_file, 'volumes/affs')\n",
+    "labels_ds = daisy.open_ds(data_file, 'volumes/labes/neuron_ids')\n",
+    "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
+    "\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0')\n",
+    "viewer = neuroglancer.Viewer()\n",
+    "with viewer.txn() as s:\n",
+    "    funlibng.add_layer(s, raw_ds, 'raw')\n",
+    "    funlibng.add_layer(s, labels_ds, 'raw')\n",
+    "    funlibng.add_layer(s, affs_ds, 'affs', shader='rgb')\n",
+    "\n",
+    "print(viewer.__str__())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -220,7 +255,7 @@
     "## Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
     "#### mknet.py\n",
     "\n",
-    "In this exercise we ask you to fill in the given template file to create a compuation graph for your neural network. Follow the instructions in the code and make use of help and documentations."
+    "In this exercise we ask you to fill in the given template file to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations."
    ]
   },
   {
@@ -622,11 +657,54 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "## Monitor the training progress\n",
+    "\n",
+    "Visualize the generated training snapshots with neuroglancer and observe loss curves using tensorboard.\n",
+    "\n",
+    "\n",
+    "#### Snapshots"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import funlib.show.neuroglancer as funlibng\n",
+    "import neuroglancer\n",
+    "\n",
+    "\"\"\"\n",
+    "Specify the snapshot you want to view here:\n",
+    "data_file = ...\n",
+    "\"\"\"\n",
+    "affs_ds = daisy.open_ds(data_file, 'volumes/affs')\n",
+    "labels_ds = daisy.open_ds(data_file, 'volumes/labes/neuron_ids')\n",
+    "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
+    "\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0')\n",
+    "viewer = neuroglancer.Viewer()\n",
+    "with viewer.txn() as s:\n",
+    "    funlibng.add_layer(s, raw_ds, 'raw')\n",
+    "    funlibng.add_layer(s, labels_ds, 'raw')\n",
+    "    funlibng.add_layer(s, affs_ds, 'affs', shader='rgb')\n",
+    "\n",
+    "print(viewer.__str__())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss\n",
+    "To visualize your loss using tensorboard open a terminal and execute: \n",
+    "```tensorboard --logdir=path/to/log-directory```"
+   ]
   }
  ],
  "metadata": {
