Fix RGB shader issues

--- a/exercises/training.ipynb
+++ b/exercises/training.ipynb
@@ -107,47 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import neuroglancer\n",
-    "import h5py\n",
-    "import numpy as np\n",
-    "\n",
-    "def add(s, a, name, offset, voxel_size, shader=None):\n",
-    "    if shader == 'rgb':\n",
-    "        shader=\"\"\"void main() \n",
-    "                  { emitRGB(vec3(toNormalized(getDataValue(0)), \n",
-    "                                 toNormalized(getDataValue(1)), \n",
-    "                                 toNormalized(getDataValue(2)))); }\"\"\"\n",
-    "\n",
-    "    kwargs = {}\n",
-    "\n",
-    "    if shader is not None:\n",
-    "        kwargs['shader'] = shader\n",
-    "\n",
-    "    s.layers.append(\n",
-    "            name=name,\n",
-    "            layer=neuroglancer.LocalVolume(\n",
-    "                data=a,\n",
-    "                offset=np.array(offset) * voxel_size,\n",
-    "                voxel_size=voxel_size\n",
-    "            ),\n",
-    "            **kwargs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3, 30, 1000, 1000)\n",
-      "http://127.0.0.1:38477/v/91dbf8ad69665fdb191328b382e499d6035bea30/\n"
+      "http://ecksteinn-ws1.int.janelia.org:39621/v/e114f4b5b1ade3301e18313656b870a11ee49865/\n"
      ]
     },
     {
@@ -185,64 +152,60 @@
       "    self._write_buffer.advance(num_bytes)\n",
       "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
       "    assert 0 < size <= self._size\n",
+      "AssertionError\n",
+      "Exception in callback None()\n",
+      "handle: <Handle cancelled>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
+      "    self._callback(*self._args)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
+      "    handler_func(fileobj, events)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
+      "    self._handle_write()\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
+      "    self._write_buffer.advance(num_bytes)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
+      "    assert 0 < size <= self._size\n",
+      "AssertionError\n",
+      "Exception in callback None()\n",
+      "handle: <Handle cancelled>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/asyncio/events.py\", line 126, in _run\n",
+      "    self._callback(*self._args)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 122, in _handle_events\n",
+      "    handler_func(fileobj, events)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/stack_context.py\", line 300, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 713, in _handle_events\n",
+      "    self._handle_write()\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 1063, in _handle_write\n",
+      "    self._write_buffer.advance(num_bytes)\n",
+      "  File \"/groups/funke/home/ecksteinn/miniconda2/envs/segmentation/lib/python3.6/site-packages/tornado/iostream.py\", line 184, in advance\n",
+      "    assert 0 < size <= self._size\n",
       "AssertionError\n"
-     ]
-    }
-   ],
-   "source": [
-    "viewer = neuroglancer.Viewer()\n",
-    "\n",
-    "with h5py.File(\"./snapshots/00000003.hdf\") as f:\n",
-    "    raw = np.array(f[\"volumes/raw\"])\n",
-    "    labels = np.array(f[\"volumes/labels/neuron_ids\"])\n",
-    "    affinities = np.array(f[\"volumes/affinities\"], dtype=np.float32)\n",
-    "\n",
-    "data_sets = {\"raw\": raw, \"labels\": labels, \"affinities\": affinities}\n",
-    "offset = (0,0,0)\n",
-    "voxel_size = (4,4,40)\n",
-    "\n",
-    "with viewer.txn() as s:\n",
-    "    for label, data in data_sets.items():\n",
-    "        if label == \"affinties\":\n",
-    "            add(s, data, label, offset, voxel_size, shader='rgb')\n",
-    "        else:\n",
-    "            add(s, data, label, offset, voxel_size)\n",
-    "\n",
-    "print(viewer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'funlib.show'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-d6a3ea23451f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mneuroglancer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mfunlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mneuroglancer\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfunlibng\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mdata_file\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./snapshots/00000003.hdf'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0maffs_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volumes/affs'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'funlib.show'"
      ]
     }
    ],
    "source": [
     "import neuroglancer\n",
     "import funlib.show.neuroglancer as funlibng\n",
+    "import daisy\n",
+    "import numpy as np\n",
     "\n",
     "data_file = './snapshots/00000003.hdf'\n",
-    "affs_ds = daisy.open_ds(data_file, 'volumes/affs')\n",
-    "labels_ds = daisy.open_ds(data_file, 'volumes/labes/neuron_ids')\n",
+    "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
+    "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
+    "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
     "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
     "\n",
     "neuroglancer.set_server_bind_address('0.0.0.0')\n",
     "viewer = neuroglancer.Viewer()\n",
     "with viewer.txn() as s:\n",
     "    funlibng.add_layer(s, raw_ds, 'raw')\n",
-    "    funlibng.add_layer(s, labels_ds, 'raw')\n",
-    "    funlibng.add_layer(s, affs_ds, 'affs', shader='rgb')\n",
+    "    funlibng.add_layer(s, labels_ds, 'labels')\n",
+    "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
     "\n",
     "print(viewer.__str__())"
    ]
@@ -676,23 +639,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import funlib.show.neuroglancer as funlibng\n",
     "import neuroglancer\n",
+    "import funlib.show.neuroglancer as funlibng\n",
+    "import daisy\n",
+    "import numpy as np\n",
     "\n",
-    "\"\"\"\n",
-    "Specify the snapshot you want to view here:\n",
-    "data_file = ...\n",
-    "\"\"\"\n",
-    "affs_ds = daisy.open_ds(data_file, 'volumes/affs')\n",
-    "labels_ds = daisy.open_ds(data_file, 'volumes/labes/neuron_ids')\n",
+    "data_file = './snapshots/00000003.hdf'\n",
+    "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
+    "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
+    "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
     "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
     "\n",
     "neuroglancer.set_server_bind_address('0.0.0.0')\n",
     "viewer = neuroglancer.Viewer()\n",
     "with viewer.txn() as s:\n",
     "    funlibng.add_layer(s, raw_ds, 'raw')\n",
-    "    funlibng.add_layer(s, labels_ds, 'raw')\n",
-    "    funlibng.add_layer(s, affs_ds, 'affs', shader='rgb')\n",
+    "    funlibng.add_layer(s, labels_ds, 'labels')\n",
+    "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
     "\n",
     "print(viewer.__str__())"
    ]
