--- a/solutions/training_solution.ipynb
+++ b/solutions/training_solution.ipynb
@@ -4,8 +4,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Specify Network Architecture\n",
-    "## mknet.py"
+    "# Exercise 0.1\n",
+    "## Introduction to EM data, neuron segmentation and gunpowder\n",
+    "### A simple gunpowder example pipeline for loading and manipulating data\n",
+    "\n",
+    "Become familiar with gunpowder. Read and try to understand the following code as well as the general principle behind gunpowder. Read the introductory example in the gunpowder documentation: https://github.com/funkey/gunpowder/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from __future__ import print_function\n",
+    "from gunpowder import *\n",
+    "from gunpowder.tensorflow import *\n",
+    "import numpy as np\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "# A simple gunpowder pipeline for loading and manipulating data:\n",
+    "data_dir = '../../woodshole/segmentation/data'\n",
+    "\n",
+    "samples = [\n",
+    "    'sample_A',\n",
+    "    'sample_B',\n",
+    "    'sample_C'\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# Define gunpowder variables of interest:\n",
+    "raw = ArrayKey('RAW') # Raw EM data\n",
+    "labels = ArrayKey('GT_LABELS') # ground truth neuron segmentation \n",
+    "affinities = ArrayKey('GT_AFFINITIES') # affinities\n",
+    "\n",
+    "# Voxel size is the physical size of one voxel (=3D pixel) in nm.\n",
+    "voxel_size = Coordinate((40, 4, 4))\n",
+    "batch_size = Coordinate((30,1000,1000)) * voxel_size\n",
+    "\n",
+    "# Request all the data you need for training:\n",
+    "request = BatchRequest()\n",
+    "request.add(raw, batch_size)\n",
+    "request.add(labels, batch_size)\n",
+    "request.add(affinities, batch_size)\n",
+    "\n",
+    "# Request a snapshot s.t. you are able to visualize the data in your pipeline.\n",
+    "snapshot_request = BatchRequest({\n",
+    "    raw: request[raw],\n",
+    "    labels: request[labels],\n",
+    "    affinities: request[affinities]\n",
+    "})\n",
+    "\n",
+    "# Note that the data only provides raw and neuron_ids which is the neuron segmentation.\n",
+    "# However, we need affinities which we can generate from neuron_ids by using gunpowder (see below):\n",
+    "data_sources = tuple(\n",
+    "    N5Source(\n",
+    "        os.path.join(data_dir, sample + '.n5'),\n",
+    "        datasets = {\n",
+    "            raw: 'volumes/raw',\n",
+    "            labels: 'volumes/labels/neuron_ids',\n",
+    "        },\n",
+    "        array_specs = {\n",
+    "            raw: ArraySpec(interpolatable=True),\n",
+    "            labels: ArraySpec(interpolatable=False)\n",
+    "        }\n",
+    "    ) +\n",
+    "    Normalize(raw) + \n",
+    "    #Pad(labels, None) +\n",
+    "    RandomLocation()\n",
+    "    for sample in samples\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "# Define a neighborhood for affinities:\n",
+    "neighborhood = [[-1, 0, 0], [0, -1, 0], [0, 0, -1]]\n",
+    "\n",
+    "pipeline = (\n",
+    "    data_sources +\n",
+    "    RandomProvider() +\n",
+    "    AddAffinities(neighborhood,\n",
+    "                 labels=labels,\n",
+    "                 affinities=affinities) +\n",
+    "    Snapshot({raw: 'volumes/raw',\n",
+    "              labels: 'volumes/labels/neuron_ids',\n",
+    "              affinities: 'volumes/affinities'}))\n",
+    "    \n",
+    "    \n",
+    "with build(pipeline) as b:\n",
+    "    b.request_batch(request)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 0.2 \n",
+    "## Visualize data using neuroglancer\n",
+    "\n",
+    "Exercise 0.1 generated a file in your working directory containg the raw EM data, neuron segmentation and affinities. The following script lets you view the data. Run both cells below and click on the resulting link. You can enable and disable layers by clicking on them. Explore the data. What do the different colors of the affinities mean? How does it relate to the segmentation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import neuroglancer\n",
+    "import funlib.show.neuroglancer as funlibng\n",
+    "import daisy\n",
+    "import numpy as np\n",
+    "\n",
+    "data_file = './snapshots/00000003.hdf'\n",
+    "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
+    "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
+    "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
+    "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
+    "\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0')\n",
+    "viewer = neuroglancer.Viewer()\n",
+    "with viewer.txn() as s:\n",
+    "    funlibng.add_layer(s, raw_ds, 'raw')\n",
+    "    funlibng.add_layer(s, labels_ds, 'labels')\n",
+    "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
+    "\n",
+    "print(viewer.__str__())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1\n",
+    "## Using gunpowder with tensorflow for training a 3D-UNet for affinity prediction\n",
+    "#### mknet.py\n",
+    "\n",
+    "In this exercise we ask you to fill in the given template file to create a computation graph for your neural network. Follow the instructions in the code and make use of help and documentations."
    ]
   },
   {
@@ -165,19 +300,17 @@
     "            json.dump(config, f)\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "\n",
-    "    z=18\n",
-    "    xy=162\n",
-    "\n",
-    "    create_network((84, 268, 268), 'train_net')\n",
-    "    create_network((96+z, 484+xy, 484+xy), 'config')\n"
+    "    create_network((84, 268, 268), 'train_net')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train Network"
+    "# Exercise 2\n",
+    "## A gunpowder training pipeline\n",
+    "\n",
+    "In this exercise we ask you to use gunpowder in combination with tensorflow to build a training pipeline for affinity prediction. Fill in the gaps in the template code below and train your network!"
    ]
   },
   {
@@ -398,6 +531,56 @@
     "\n",
     "    iteration = 500000\n",
     "    train_until(iteration)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "## Monitor the training progress\n",
+    "\n",
+    "Visualize the generated training snapshots with neuroglancer and observe loss curves using tensorboard.\n",
+    "\n",
+    "\n",
+    "#### Snapshots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import neuroglancer\n",
+    "import funlib.show.neuroglancer as funlibng\n",
+    "import daisy\n",
+    "import numpy as np\n",
+    "\n",
+    "data_file = './snapshots/00000003.hdf'\n",
+    "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
+    "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
+    "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
+    "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
+    "\n",
+    "neuroglancer.set_server_bind_address('0.0.0.0')\n",
+    "viewer = neuroglancer.Viewer()\n",
+    "with viewer.txn() as s:\n",
+    "    funlibng.add_layer(s, raw_ds, 'raw')\n",
+    "    funlibng.add_layer(s, labels_ds, 'labels')\n",
+    "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
+    "\n",
+    "print(viewer.__str__())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Loss\n",
+    "To visualize your loss using tensorboard open a terminal and execute: \n",
+    "```tensorboard --logdir=path/to/log-directory```"
    ]
   },
   {
