Add training visualisation

--- a/exercises/training.ipynb
+++ b/exercises/training.ipynb
@@ -643,10 +643,18 @@
     "import funlib.show.neuroglancer as funlibng\n",
     "import daisy\n",
     "import numpy as np\n",
+    "\"\"\"\n",
+    "data_file = ...\n",
+    "\"\"\"\n",
     "\n",
-    "data_file = './snapshots/00000003.hdf'\n",
-    "affs_ds = daisy.open_ds(data_file, 'volumes/affinities')\n",
-    "affs_ds.data = np.array(affs_ds.data, dtype=np.float32)\n",
+    "gt_affs_ds = daisy.open_ds(data_file, 'volumes/gt_affinities')\n",
+    "gt_affs_ds.data = np.array(gt_affs_ds.data, dtype=np.float32)\n",
+    "\n",
+    "pred_affs_ds = daisy.open_ds(data_file, 'volumes/pred_affinities')\n",
+    "pred_affs_ds.data = np.array(pred_affs_ds.data, dtype=np.float32)\n",
+    "\n",
+    "gradients_ds = daisy.open_ds(data_file, 'volumes/affs_gradient')\n",
+    "\n",
     "labels_ds = daisy.open_ds(data_file, 'volumes/labels/neuron_ids')\n",
     "raw_ds = daisy.open_ds(data_file, 'volumes/raw')\n",
     "\n",
@@ -655,7 +663,9 @@
     "with viewer.txn() as s:\n",
     "    funlibng.add_layer(s, raw_ds, 'raw')\n",
     "    funlibng.add_layer(s, labels_ds, 'labels')\n",
-    "    funlibng.add_layer(s, affs_ds, 'affinities', shader='rgb')\n",
+    "    funlibng.add_layer(s, gt_affs_ds, 'gt_affinities', shader='rgb')\n",
+    "    funlibng.add_layer(s, pred_affs_ds, 'pred_affinities', shader='rgb')\n",
+    "    funlibng.add_layer(s, gradients_ds, 'gradients')\n",
     "\n",
     "print(viewer.__str__())"
    ]
